# libtslitex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  litepcie_driver_win.sln  requirements.txt  version.cmake
.github/workflows/: build-cmake.yml  build-python-bindings.yml  build_cmake.yml
bindings/python/: CMakeLists.txt  __init__.py.in  pyproject.toml  pyproject.toml.in  ts_calibration.pxd  tslitex.pxd  tslitex.pyx
doc/: calibration_data.md  thunderscope.drawio
doc/data/: hwid.schema.json
example/: AudioFile.h  CMakeLists.txt  litepcie_test.cpp  thunderscope_cal.cpp  thunderscope_fw.cpp  thunderscope_test.cpp  thunderscope_test.h  tsControl.py
include/: adc.h  afe.h  channel.h  thunderscope.h  ts_calibration.h  ts_channel.h  ts_common.h
liblitepcie/: liblitepcie.vcxproj
litepcie/: CMakeLists.txt
litepcie/include/: liblitepcie.h  litepcie_dma.h  litepcie_helpers.h
litepcie/public_h/: config.h  csr.h  litepcie.h  litepcie_linux.h  litepcie_mac.h  litepcie_win.h  soc.h
litepcie/src/: CMakeLists.txt  litepcie_dma.c  litepcie_helpers.c
litepcie_thunderscope/: litepcie_thunderscope.cpp  litepcie_thunderscope.h  litepcie_thunderscope.vcxproj  litepcie_thunderscope.vcxproj.filters  thunderscope_test.patch
litepciedrv/: litepciedrv.vcxproj
litepciedrv/public_h/: csr.h  soc.h
src/: adc.c  adc.h  afe.c  afe.h  events.c  events.h  gpio.c  gpio.h  hmcad15xx.c  hmcad15xx.h  i2c.c  i2c.h  i2c_bit.c  i2c_bit.h  lmh6518.c  lmh6518.h  mcp443x.c  mcp443x.h  mcp4728.c  mcp4728.h  mcp_clkgen.c  mcp_clkgen.h  mcp_zl3026x.c  mcp_zl3026x.h  platform.c  platform.h  samples.c  samples.h  spi.c  spi.h  spiflash.c  spiflash.h  thunderscope.c  ts_channel.c  ts_channel.h  ts_data.c  ts_data.h  ts_fw_manager.c  ts_fw_manager.h  util.h  (+4 more)
